--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="https://kit.fontawesome.com/77b0e621d5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </link> 
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v4.7.0/css/allcss">
+  <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="css/style.css`" /> -->
     <title>Oh my Food-Accueil</title>
@@ -43,6 +44,7 @@
                 <ul>
               <div id="puces1">
                 <i class="fa-solid fa-circle"></i>
+                <span>1</span>
             </div>
               <li class="fonction-choix">
                 <i class="fa-solid fa-mobile-screen-button"></i><span>Choisissez un restaurant</span>
@@ -50,11 +52,13 @@
                 
                 <div id="puces2">
                     <i class="fa-solid fa-circle"></i>
+                  <span>2</span>
                   </div>
                 <li class="fonction-choix"><i class="fa-solid fa-list-ul"></i><span>Composez votre menu</span></li>
                 
                 <div id="puces3">
                   <i class="fa-solid fa-circle"></i>
+                <span>3</span>
                 </div>
                   <li class="fonction-choix"><i class="fa-solid fa-store"></i><span>Dégustez au restaurant</span></li>
             </ul>
@@ -69,14 +73,15 @@
           </div>
           <a href="la-palette-du-gout.html" class="a-ref-cards">
             <figure class="figure-card">
-              <img  src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""/>
+              <img  src="images/restaurants/menu-1.jpg" alt="la-palette-du-gout"/>
               <span>nouveau</span>
               <figcaption class="figcap-flex"> 
                   <div class="items"><h3>La palette du goût</h3>
                   </div>
                   <div class="items"><p>Ménilmontant</p>
                     </div> 
-                    <div class="items"><i class="fa-regular fa-heart"></i></div>
+                    <div class="items"><i class="fa-regular fa-heart"></i>
+                    </div>
               </figcaption> 
             </figure>
           </a>
@@ -86,8 +91,8 @@
             <a href="la-note-enchantée.html" class="a-ref-cards">
               <figure class="figure-card card2">
                 <img
-                src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                alt="test"
+                src="images/restaurants/menu-2.jpg"
+                alt="la-note-enchantée"
                 />
                 <span>nouveau</span>
                   <figcaption class="figcap-flex">
@@ -107,8 +112,8 @@
           <a href="a-la-francaise.html" class="a-ref-cards">
           <figure class="figure-card">
               <img
-                src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                alt=""
+                src="images/restaurants/menu-3.jpg"
+                alt="a-la-française"
               />
               <figcaption class="figcap-flex">
                   <div class="items">
@@ -127,8 +132,8 @@
           <a href="les-delices-des-sens.html" class="a-ref-cards">
           <figure class="figure-card">
               <img
-                src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt=""
+                src="images/restaurants/menu-4.jpg"
+                alt="les-délices-des-sens"
               />
               <figcaption class="figcap-flex">
                 <div class="items">
