realisation et test sur les coeurs animation

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <!-- <link rel="stylesheet" href="css/style.css`" /> -->
     <title>Oh my Food-Accueil</title>
   </head>
-  <body>
+  <body>  
+          <div class="contener-spin">  
             <div id="loader-spin"></div>
-    <main> 
+          </div>
+            <main> 
         <header>
           <h1 class="logo-entete">ohmyfood</h1>
         </header>
@@ -123,7 +125,11 @@
                   <div class="items">
                   <p>Cité Rouge</p>
                   </div>
-                  <div class="items"><i class="fa-regular fa-heart"></i></div>
+                  <div class="items">
+                    <i class="far fa-heart coeur-vide">
+                      <i class="fas fa-heart coeur-plein"></i>
+                    </i>
+                  </div>
               </figcaption>
             </figure>
           </a>
