Pré-Finalisation du projet, réajustement de la partie Fonctionnement et création du README

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -19,7 +19,7 @@
         </header>
         
         <div class="entete">
-            <img src="/images/restaurants/menu-3.jpg" alt="a-la-française">
+            <img src="/images/restaurants/menu-3.jpg" alt="à-la-française">
         </div>
         
         <div class="fond-couleur">
@@ -146,12 +146,12 @@
         <footer>
             <nav>
               <h3 class="logo-footer">ohmyfood</h3>
-              <ul>
-                <li><a class="active" href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                <li><a class="active" href="#"><i class="fa-solid fa-handshake-angle fa-xs logo-main"></i>Devenir partenaire</a></li>
-                <li><a class="active" href="#">Mentions légales</a></li>
-                <li><a class="active" href="mailto:contact-ohmyfood@gmail.com">Contact</a></li>
-              </ul>
+                <ul>
+                    <li><a class="active" href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                    <li><a class="active" href="#"><i class="fa-solid fa-handshake-angle fa-xs logo-main"></i>&ensp;Devenir partenaire</a></li>
+                    <li><a class="active" href="#">Mentions légales</a></li>
+                    <li><a class="active" href="mailto:contact-ohmyfood@gmail.com">Contact</a></li>
+                </ul>
             </nav>
         </footer>
     </main>
