--- a/les-delices-des-sens.html
+++ b/les-delices-des-sens.html
@@ -13,7 +13,7 @@
     <main> 
         <header class="retour">
             <h1 class="logo-entete-next" ><a href="index.html">
-                <i class="fa-solid fa-arrow-left"></a></i>
+                <i class="fa-solid fa-arrow-left"></i></a>
                 ohmyfood
             </h1>
         </header>
@@ -138,19 +138,19 @@
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
-                <button class="button-command">Commander</button>
-        </section>
+                    <button class="button-command">Commander</button>
+            </section>
         </div>
         
         <footer>
             <nav>
               <h3 class="logo-footer">ohmyfood</h3>
-              <ul>
-                <li><a class="active" href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                <li><a class="active" href="#"><i class="fa-solid fa-handshake-angle fa-xs logo-main"></i>Devenir partenaire</a></li>
-                <li><a class="active" href="#">Mentions légales</a></li>
-                <li><a class="active" href="mailto:contact-ohmyfood@gmail.com">Contact</a></li>
-              </ul>
+                <ul>
+                    <li><a class="active" href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                    <li><a class="active" href="#"><i class="fa-solid fa-handshake-angle fa-xs logo-main"></i>&ensp;Devenir partenaire</a></li>
+                    <li><a class="active" href="#">Mentions légales</a></li>
+                    <li><a class="active" href="mailto:contact-ohmyfood@gmail.com">Contact</a></li>
+                </ul>
             </nav>
         </footer>
     </main>
