Test correctif image

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -19,7 +19,7 @@
         </header>
         
         <div class="entete">
-            <img src="/images/restaurants/menu-3.jpg" alt="à-la-française">
+            <img src="./images/restaurants/menu-3.jpg" alt="à-la-française">
         </div>
         
         <div class="fond-couleur">
