Finalisation du projet et re-control de ce dernier

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -25,7 +25,7 @@
         <div class="fond-couleur">
             
             <div class="nom-restaurant">
-                <div class="gout"><h2>À la francaise</h2>
+                <div class="gout"><h2>À la française</h2>
                 </div>
                     <div class="coeur">
                         <i class="far fa-heart coeur-vide">
