--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -104,7 +104,7 @@
                 </div>
             <div class="menus-restaurants">
                     <div class="menu-texte">    
-                        <h3>Mijoté de queue de boeuf</h3>
+                        <h3>Mijoté de queue de bœuf</h3>
                         <p>Et riz sauvage aux zestes de citron</p>
                     </div>
                     <div class="menu-prix">44€</div>
