--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -19,7 +19,7 @@
         </header>
         
         <div class="entete">
-            <img src="/images/restaurants/menu-1.jpg" alt="La palette-du-gout">
+            <img src="./images/restaurants/menu-1.jpg" alt="La palette-du-gout">
         </div>
         
         <div class="fond-couleur">
