Test nomination chemin .img

--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -19,7 +19,7 @@
         </header>
         
         <div class="entete">
-            <img src="/images/restaurants/menu-2.jpg" alt="la-note-enchantée">
+            <img src="./images/restaurants/menu-2.jpg" alt="la-note-enchantée">
         </div>
         
         <div class="fond-couleur">
