reconfiguration du projet

--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/restaurant.css">
@@ -33,7 +33,7 @@
                         </i>  
                     </div>
                 </div>
-            
+            <div class="menu-flex">
             <section class="entrees"><p>Entrées</p>
                 <div class="menus-restaurants">
                     <div class="menu-texte">
@@ -149,19 +149,19 @@
                 </div>
                 <button class="button-command">Commander</button>
         </section>
+            </div>
+            <footer>
+                <nav>
+                    <h3 class="logo-footer">ohmyfood</h3>
+                    <ul>
+                        <li><a class="active" href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                        <li><a class="active" href="#"><i class="fa-solid fa-handshake-angle fa-xs"></i>&ensp;Devenir partenaire</a></li>
+                        <li><a class="active" href="#">Mentions légales</a></li>
+                        <li><a class="active" href="mailto:contact-ohmyfood@gmail.com">Contact</a></li>
+                    </ul>
+                </nav>
+            </footer>
         </div>
-        
-        <footer>
-            <nav>
-              <h3 class="logo-footer">ohmyfood</h3>
-                <ul>
-                    <li><a class="active" href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                    <li><a class="active" href="#"><i class="fa-solid fa-handshake-angle fa-xs"></i>&ensp;Devenir partenaire</a></li>
-                    <li><a class="active" href="#">Mentions légales</a></li>
-                    <li><a class="active" href="mailto:contact-ohmyfood@gmail.com">Contact</a></li>
-                </ul>
-            </nav>
-        </footer>
     </main>
 </body>
 </html>
