--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no" />
     <script src="https://kit.fontawesome.com/77b0e621d5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v4.7.0/css/allcss">
-  <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Oh my Food-Accueil</title>
   </head>
@@ -43,7 +43,7 @@
 						  <p id="nombre1">1</p>
 						  <i class="fa-solid fa-circle"></i> 
               <i class="fa-solid fa-mobile-screen-button"></i>
-						  <p>Choisissez un restaurant</p>
+						  <p class="puce-texte">Choisissez un restaurant</p>
 					</div>
 			
 			    <div id="puce2" class="couleur">
@@ -51,7 +51,7 @@
 						  <i class="fa-solid fa-circle">
               </i>
 						  <i class="fa-solid fa-list-ul"></i>
-						  <p>Composez votre menu</p>
+						  <p class="puce-texte">Composez votre menu</p>
 					</div>
 			
           <div id="puce3" class="couleur">
@@ -59,91 +59,86 @@
 						  <i class="fa-solid fa-circle">
               </i>
 						  <i class="fa-solid fa-store"></i>
-						  <p>Dégustez au restaurant</p>
+						  <p class="puce-texte">Dégustez au restaurant</p>
 					</div>
         </section>
 
         <!-- ----------------- RESTAURANTS --------------------- -->
       <section id="contener-restaurants">
-          <div id="contener-grid">
+          <div id="contener-bis">
             <h2 id="h2-resto">Restaurants</h2>
-          
+
             <a href="la-palette-du-gout.html" class="a-ref-cards">
-            <figure class="figure-card card1">
-              <img  src="images/restaurants/menu-1.jpg" alt="la-palette-du-gout"/>
-              <span>nouveau</span>
-              <figcaption class="figcap-flex"> 
-                  <div class="items"><h3>La palette du goût</h3>
-                  </div>
-                  <div class="items"><p>Ménilmontant</p>
-                    </div> 
-                    <div class="items">
-						          <i class="far fa-heart coeur-vide">
-						          <i class="fas fa-heart coeur-plein"></i>
-						        </i>
-              		</div>
-              </figcaption> 
-            </figure>
-          </a>
+                <figure class="figure-card card1">
+                    <img  src="images/restaurants/menu-1.jpg" alt="la-palette-du-gout"/>
+                    <figcaption class="figcap-flex">
+                        <span>nouveau</span>
+                        <div class="content-card">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <div class="coeur-card">
+                            <i class="far fa-heart coeur-vide">
+                              <i class="fas fa-heart coeur-plein"></i>
+                            </i>
+              		    </div>
+                    </figcaption>
+                </figure>
+            </a>
           
             <a href="la-note-enchantée.html" class="a-ref-cards">
               <figure class="figure-card card2">
-                <img src="images/restaurants/menu-2.jpg"
-                    alt="la-note-enchantée"/>
-                <span>nouveau</span>
-				        	<figcaption class="figcap-flex">
-                      <div class="items">
-                            <h3>La note enchantée </h3> 
-                        </div>
-                      <div class="items">
-                            <p>Charonne</p>
-                        </div>
-                      <div class="items">
+                <img src="images/restaurants/menu-2.jpg" alt="la-note-enchantée"/>
+
+                <figcaption class="figcap-flex">
+                    <span>nouveau</span>
+                    <div class="content-card">
+                        <h3>La note enchantée</h3>
+                        <p>Charonne</p>
+                    </div>
+
+                    <div class="coeur-card">
                         <i class="far fa-heart coeur-vide">
-						            <i class="fas fa-heart coeur-plein"></i>
-						          </i>
-                      </div>
-                	</figcaption>
+                            <i class="fas fa-heart coeur-plein"></i>
+                        </i>
+                    </div>
+                </figcaption>
             </figure>
           </a>
 
           <a href="a-la-francaise.html" class="a-ref-cards">
-          <figure class="figure-card">
-              <img src="images/restaurants/menu-3.jpg"
-                alt="à-la-française"/>
-              <figcaption class="figcap-flex">
-                  <div class="items">
-                  <h3>À la française</h3> 
-                  </div>
-                  <div class="items">
-                  <p>Cité Rouge</p>
-                  </div>
-                  <div class="items">
-                      <i class="far fa-heart coeur-vide">
-                      <i class="fas fa-heart coeur-plein"></i>
-                    </i>
-                  </div>
-              </figcaption>
+            <figure class="figure-card">
+                <img src="images/restaurants/menu-3.jpg" alt="à-la-française"/>
+                <figcaption class="figcap-flex">
+                    <div class="content-card">
+                        <h3>À la française</h3>
+                        <p>Cité Rouge</p>
+                    </div>
+
+                    <div class="coeur-card">
+                        <i class="far fa-heart coeur-vide">
+                            <i class="fas fa-heart coeur-plein"></i>
+                        </i>
+                    </div>
+                </figcaption>
             </figure>
           </a>
 
           <a href="les-delices-des-sens.html" class="a-ref-cards">
-          <figure class="figure-card">
-              <img src="images/restaurants/menu-4.jpg"
-                alt="les-délices-des-sens"/>
-              <figcaption class="figcap-flex">
-                <div class="items">
-                    <h3>La délice des sens</h3> 
-                </div>
-                <div class="items">
-                    <p>Folie-Méricourt</p>
-                </div>
-                <div class="items">
-					        <i class="far fa-heart coeur-vide">
-					        <i class="fas fa-heart coeur-plein"></i>
-				         </i>
-				        </div>
-              </figcaption>
+            <figure class="figure-card">
+                <img src="images/restaurants/menu-4.jpg" alt="les-délices-des-sens"/>
+                <figcaption class="figcap-flex">
+                    <div class="content-card">
+                        <h3>La délice des sens</h3>
+                        <p>Folie-Méricourt</p>
+                    </div>
+
+                    <div class="coeur-card">
+                        <i class="far fa-heart coeur-vide">
+                            <i class="fas fa-heart coeur-plein"></i>
+                        </i>
+                    </div>
+                </figcaption>
             </figure>
           </a>
         </div>
